k8s/local-path-storage2.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: local-path-storage2

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-path-provisioner2
  namespace: local-path-storage2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: local-path-provisioner2
  template:
    metadata:
      labels:
        app: local-path-provisioner2
    spec:
      serviceAccountName: local-path-provisioner-service-account2
      containers:
        - name: local-path-provisioner2
          image: rancher/local-path-provisioner:master-head
          imagePullPolicy: IfNotPresent
          command:
            - local-path-provisioner
            - --debug
            - start
            - --config
            - /etc/config/config.json
          volumeMounts:
            - name: config-volume2
              mountPath: /etc/config/
      volumes:
        - name: config-volume2
          configMap:
            name: local-path-config2
