k8s/postgres-orders-deployment.yaml
---
# Defin a Service to expose database to other service
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  namespace: itep-g3
  labels:
    app: orders-db
    tier: database
spec:
  ports:
    - port: 5432
  selector:
    app: orders-db
    tier: database
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: orders-db
  namespace: itep-g3
  labels:
    app: orders-db
    tier: database

spec:
  selector:
    matchLabels:
      app: orders-db
  serviceName: orders-db
  replicas: 1
  template:
    metadata:
      labels:
        app: orders-db
        tier: database
    spec:
      containers:
        - name: postgres
 ######################################################################################################
 ###### This is the pulled docker image:tag that will be used to create the db container
          image: postgres:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5432
              hostPort: 5432
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-persistance-storage
      volumes:
        - name: postgres-persistance-storage
          persistentVolumeClaim:
            claimName: orders-db-pv-claim
