k8s/postgres-restaurant-deployment.yaml
---
# Defin a Service to expose database to other service
apiVersion: v1
kind: Service
metadata:
  name: restaurant-db
  namespace: itep-g3
  labels:
    name: restaurant-db
    app: restaurant-db
    tier: database
spec:
  ports:
    - port: 5432
  selector:
    app: restaurant-db
    tier: database
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: restaurant-db
  namespace: itep-g3
  labels:
    app: restaurant-db
    tier: database

spec:
  selector:
    matchLabels:
      app: restaurant-db
  serviceName: restaurant-db
  replicas: 1
  template:
    metadata:
      labels:
        app: restaurant-db
        tier: database
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5432
              hostPort: 5431
              name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-persistance-storage
      volumes:
        - name: postgres-persistance-storage
          persistentVolumeClaim:
            claimName: restaurant-db-pv-claim
