k8s/restaurant-deployment.yaml


apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service-k8s
  namespace: itep-g3
spec:
  selector:
    matchLabels:
      app: restaurant-service-k8s
  replicas: 1
  template:
    metadata:
      labels:
        app: restaurant-service-k8s
    spec:
      containers:
        - name: restaurant-service-k8s
          image: group-3-restaurant-service-restaurantservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8086
              hostPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service-k8s
  namespace: itep-g3
  labels:
    name: restaurant-service-k8s
spec: # Specifies the specification of the Service, including its selector and ports.
  selector: # Specifies how the Service identifies which Pods to target.
    app: restaurant-service-k8s # Selects Pods with the label
  ports:
    - protocol: TCP #Specifies the protocol used for the port (TCP or UDP).
      port: 8086 # Specifies the port number on the Service itself.
      targetPort: 8086 #Specifies the port number on the Pods targeted by the Service.
#   spec:
#     ports:
#     - port: 8082

#   # type: ClusterIP
#   # ports:
#   # - port: 8082
#   #   targetPort: 8082
#   selector:
#     app: orders-service-k8s
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress
#   namespace: delivery-prod
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
# spec:
#   rules:
#     - host: whoami.info
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: orders-service-k8s
#                 port:
#                   number: 80
