k8s/cust-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-ingress
  namespace: itep-g3
spec:
  ingressClassName: "nginx"  # Using the new field instead of the annotation
  rules:
    - host: customer.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-service-k8s
                port:
                  number: 8069
