k8s/delv-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: delivery-ingress
  namespace: itep-g3
spec:
  ingressClassName: "nginx"  # Using the new field instead of the annotation
  rules:
    - host: delivery.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: delivery-microservice-k8s
                port:
                  number: 7070
