k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-ingress
  namespace: itep-g3
spec:
  ingressClassName: "nginx"  # Using the new field instead of the annotation
  rules:
    - host: restaurant.itep.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restaurant-service-k8s
                port:
                  number: 8086
