k8s/sms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: message-ingress
  namespace: itep-g3
spec:
  ingressClassName: "nginx"  # Using the new field instead of the annotation
  rules:
    - host: message.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: message-service-k8s
                port:
                  number: 9090
